Fixed possible contrast violations

--- a/chamber/styles/index-large.css
+++ b/chamber/styles/index-large.css
@@ -122,9 +122,15 @@
         color: var(--white-col);
     }
 
+    section {
+        color: var(--white-col);
+    }
+
     section h1,
     section h2,
-    section h3 {
+    section h3,
+    section p,
+    section a {
         color: var(--gold-col);
     }
 
